* cpu-step-mode can be disabled from the menu, pressing ESC

Improved ZX Spectrum Next emulation: updated machine id list
Improved Process Management: allow to copy any windows contents to internal clipboard
Improved Accessibility: Added Sounds for GUI events
Improved inserting Real Tape: process is faster and part runs on background

* Fixes:

Fixed several memory leaks (thanks to tool valgrind) found on:
- Drawing Text Aventure Map
- Loading .Z80 snapshots
- Using the Speccy online browser
- Running the Hilow Audio Convert
- Enabling ZRCP
- Downloading ZEsarUX extras
- Downloading ZX Spectrum Next MMC image
- Syncing file image from File Utilities
- Copying a folder from File Utilities
- Showing First Aid Windows

Fixed Initialization of Visual memory tables
Fixed ZX Vision windows relocation
Fixed rendering display when CPU is on Top Speed mode
Fixed error when no permissions writing to mmc, ide, trd, dsk, ddh (hilow): disable persistent writes when it happens
Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
Fixed Text Adventure Graphics rendering invalid characters
Fixed esxdos handler when using fopen flags: FA_READ + FA_WRITE + FA_OPEN_CREAT
Fixed ZRCP bug when closing connection (socket descriptor was kept open)
Fixed reading ESC key on curses driver
Fixed support for .config files on .dsk
Fixed segfault when: autorewind enabled+insert rwa/smp/wav file as standard tape+end of tape+try to load
Fixed possible segfault when downloading and uncompressing zip files and canceling operation
Fixed compilation when disabling pthreads support
Fixed showing info on Visual Real Tape when inserting a ZX80 audio tape

* Misc Changes:

Changed CPC Copy key assignation: now is the End key on your keyboard

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023
